cmake_minimum_required(VERSION 2.8)
set( EXECNAME postingApp )
find_package( MOOS 10 )
set(SRCS postingApp.cpp)
include_directories( ${MOOS_INCLUDE_DIRS} ${MOOS_DEPEND_INCLUDE_DIRS} )
add_executable( ${EXECNAME} ${SRCS} )
target_link_libraries( ${EXECNAME} ${MOOS_LIBRARIES} ${MOOS_DEPEND_LIBRARIES} )
